--- a/server/.sequelizerc
+++ b/server/.sequelizerc
@@ -1,8 +1,9 @@
 const path = require('path');
+require('dotenv').config();
 
 module.exports = {
-  'config': path.resolve('./src/server/config', 'postgresConfig.json'),
-  'models-path': path.resolve('./src/server/models'),
-  'seeders-path': path.resolve('./src/server/seeders'),
-  'migrations-path': path.resolve('./src/server/migrations'),
+  'config': path.resolve('./config', 'postgresConfig.json'),
+  'models-path': path.resolve('./models'),
+  'seeders-path': path.resolve('./seeders'),
+  'migrations-path': path.resolve('./migrations'),
 };
