--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "babel-node": "babel-node",
-    "start": "nodemon --exec babel-node ./src/index.js",
-    "test": "jest",
-    "build": "babel src -d dist"
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js",
+    "test": "jest"
   },
   "dependencies": {
     "bcrypt": "^3.0.2",
