--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,71 +1,17 @@
 {
-  "extends": "eslint:recommended",
-  "env": {
-    "node": true,
-    "browser": true,
-    "es6": true
-  },
-  "parserOptions": {
-    "ecmaVersion": 2017,
-    "sourceType": "module"
-  },
-  "rules": {
-    "comma-dangle": [
-      "error",
-      "always-multiline"
-    ],
-    "comma-spacing": [
-      "error",
-      {
-        "before": false,
-        "after": true
-      }
-    ],
-    "eol-last": [
-      "error",
-      "always"
-    ],
-    "indent": [
-      "error",
-      2,
-      {
-        "MemberExpression": 1
-      }
-    ],
-    "no-multiple-empty-lines": [
-      "error"
-    ],
-    "no-new-symbol": "error",
-    "no-trailing-spaces": [
-      "error"
-    ],
-    "no-undef": [
-      "error"
-    ],
-    "no-unused-vars": [
-      "warn"
-    ],
-    "object-curly-spacing": [
-      "error",
-      "always"
-    ],
-    "object-shorthand": "error",
-    "prefer-const": 2,
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ],
-    "space-in-parens": [
-      "error",
-      "never"
-    ],
-    "strict": [
-      2,
-      "never"
-    ]
-  }
+    "env": {
+        "commonjs": true,
+        "es6": true,
+        "node": true
+    },
+    "extends": "semistandard",
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+        "ecmaVersion": 2018
+    },
+    "rules": {
+    }
 }
