--- a/server/package.json
+++ b/server/package.json
@@ -49,10 +49,14 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
-    "eslint": "^5.3.0",
+    "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "nodemon": "^2.0.2",
+    "semistandard": "^16.0.0",
     "sequelize-cli": "^5.5.1"
   }
 }
