--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "axios": "^0.18.1",
     "card-validator": "^6.1.0",
     "chalk": "^2.4.2",
     "classnames": "^2.2.6",
     "flickity": "^2.2.0",
+    "formik": "^2.2.6",
     "history": "^4.9.0",
     "js-file-download": "^0.4.5",
     "lodash": "^4.17.15",
@@ -25,7 +27,7 @@
     "react-image-lightbox": "^5.1.0",
     "react-input-mask": "^2.0.4",
     "react-rating": "^1.6.2",
-    "react-redux": "^6.0.1",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-spinners": "^0.5.4",
