--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
     "axios": "^0.18.1",
     "card-validator": "^6.1.0",
     "chalk": "^2.4.2",
@@ -22,6 +21,7 @@
     "react-confirm": "^0.1.18",
     "react-confirm-alert": "^2.4.1",
     "react-credit-cards": "^0.7.0",
+    "react-datepicker": "^3.6.0",
     "react-dev-utils": "^8.0.0",
     "react-dom": "^16.8.5",
     "react-flickity-component": "^3.3.0",
