--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-confirm": "^0.1.18",
     "react-confirm-alert": "^2.4.1",
     "react-credit-cards": "^0.7.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^3.6.0",
     "react-dev-utils": "^8.0.0",
     "react-dom": "^16.8.5",
