--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.1",
+    "bootstrap": "^4.6.0",
     "card-validator": "^6.1.0",
     "chalk": "^2.4.2",
     "classnames": "^2.2.6",
