Add log to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@
 ./server/uploadFiles
 ./server/upload
 ./server/public
+./server/log
 
 ./server/public/images
 .server/public/images
 **server/public/*
 *server/public/*
+*server/log/*
