--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server.js",
-    "dev": "nodemon ./server.js",
+    "start": "node -r dotenv/config ./server.js",
+    "dev": "nodemon -r dotenv/config ./server.js",
     "test": "jest"
   },
   "dependencies": {
@@ -13,7 +13,7 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.2.0",
     "ejs": "~2.5.7",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
@@ -28,6 +28,7 @@
     "jwt-decode": "^2.2.0",
     "less-middleware": "^3.1.0",
     "lodash": "^4.17.11",
+    "mailgun-js": "^0.22.0",
     "merge-graphql-schemas": "^1.5.7",
     "moment": "^2.24.0",
     "mongoose": "^5.5.3",
